[project]
name = "study-planner-openenv"
version = "1.0.0"
description = "AI Study Planner RL Environment"
authors = [
    {name = "Sanjeev Kumar"}
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env = "env.py"
