[project]
name = "study-planner-openenv"
version = "1.0.0"
description = "AI Study Planner RL Environment"
authors = [
    {name = "Sanjeev Kumar"}
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml",
    "openenv-core==0.2.3",
    "openai>=2.7.2"
]

[project.scripts]
server = "server.app:app"

[tool.openenv]
env = "env.py"
